# challenge_GA

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
docs/: setup.md
models/: model.joblib
notebooks/: modeling.ipynb
src/api/: main_api.py
src/titanic/: data_processing.py  train.py
